openshift-strimzi/install/topic-operator/05-Deployment-strimzi-topic-operator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: strimzi-topic-operator
  labels:
    app: strimzi
spec:
  replicas: 1
  selector:
    matchLabels:
      name: strimzi-topic-operator
  template:
    metadata:
      labels:
        name: strimzi-topic-operator
    spec:
      serviceAccountName: strimzi-topic-operator
      containers:
        - name: strimzi-topic-operator
          image: strimzi/operator:0.17.0-rc4
          args:
          - /opt/strimzi/bin/topic_operator_run.sh
          livenessProbe:
            httpGet:
              path: /healthy
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /ready
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 30
          resources:
            limits:
              memory: 96Mi
              cpu: 100m
            requests:
              memory: 96Mi
              cpu: 100m
  strategy:
    type: Recreate

---

  apiVersion: extensions/v1beta1
  kind: NetworkPolicy
  metadata:
    labels:
      app: strimzi-topic-operator
    name: strimzi-topic-operator
  spec:
    ingress:
    - from:
      - podSelector:
          matchLabels:
            app: strimzi-topic-operator
      ports:
      - port: 2181
        protocol: TCP
    podSelector:
      matchLabels:
        strimzi.io/name: eda-demo-24-cluster-zookeeper
    policyTypes:
    - Ingress
